--- a/data/po/eo.po
+++ b/data/po/eo.po
@@ -11,6 +11,7 @@
 # Jorge Maldonado Ventura <jorgesumle@freakspot.net>, 2021
 # Kevin G <k@guillaumond.me>, 2021
 # Lagash, 2022
+# Nicolas G, 2022
 # Rachel Singh <rachel@moosader.com>, 2018
 # Robin van der Vliet <info@robinvandervliet.com>, 2015
 # Stefan R. Grotz <stefan.grotz@posteo.de>, 2019
@@ -20,9 +21,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SuperTuxKart\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-05-25 09:02+0800\n"
+"POT-Creation-Date: 2022-08-24 11:55+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Lagash, 2022\n"
+"Last-Translator: Nicolas G, 2022\n"
 "Language-Team: Esperanto (http://www.transifex.com/supertuxkart/supertuxkart/language/eo/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -78,7 +79,7 @@ msgstr "Maratonisto"
 
 #. I18N: ./data/achievements.xml
 msgid "Finish a race with at least twice the track's default lap number."
-msgstr ""
+msgstr "Kompletu vetkuron kun almenaŭ la dufoje nombro de la defaŭlta nombro de la rondiro."
 
 #. I18N: ./data/achievements.xml
 msgid "Skid-row"
@@ -96,7 +97,7 @@ msgstr "Ora ŝoforo"
 msgid ""
 "Win against at least 3 AIs in normal race, time-trial, and follow the "
 "leader."
-msgstr ""
+msgstr "Venku kontraŭ almenaŭ 3 robotojn en normalaj vetkuroj, tempoprovo, kaj sekvu la gvidanton."
 
 #. I18N: ./data/achievements.xml
 msgid "Powerup Love"
@@ -114,7 +115,7 @@ msgstr "Nehaltigebla"
 msgid ""
 "Win 5 single races in a row against at least 3 AIs. Beware, restarting a "
 "race counts as a loss."
-msgstr ""
+msgstr "Venku 5 ununurajn vetkurojn kontraŭ almenaŭ 3 artefaritaj inteligentoj. Atentu, komenci vetkuron denove kalkulas kiel perdo."
 
 #. I18N: ./data/achievements.xml
 msgid "Banana Lover"
@@ -140,7 +141,7 @@ msgstr "Moskitoĉasisto"
 msgid ""
 "Take your opponents for mosquitos! With the swatter, squash them at least 5 "
 "times in a race."
-msgstr ""
+msgstr "Prenu viajn kontraŭulojn kiel muŝojn! Per la muŝbatilo, platpremu ilin almenaŭ 5 fojojn en vetkuro."
 
 #. I18N: ./data/achievements.xml
 msgid "Beyond Luck"
@@ -150,7 +151,7 @@ msgstr "Ekster Bonŝancon"
 msgid ""
 "Win 10 single races in a row in Expert or SuperTux against at least 5 AIs. "
 "Beware, restarting a race counts as a loss."
-msgstr ""
+msgstr "Venku 10 ununurajn vetkurojn en vico kiel spertulo aŭ SuperTux kontraŭ almenaŭ 5 artefaritaj inteligentoj. Atentu, rekomenci vetkuron kalkulas kiel perdo."
 
 #. I18N: ./data/grandprix/1_penguinplayground.grandprix
 msgid "Penguin Playground"
@@ -158,7 +159,7 @@ msgstr "Pingvena ludejo"
 
 #. I18N: ./data/grandprix/2_offthebeatentrack.grandprix
 msgid "Off the Beaten Track"
-msgstr ""
+msgstr "Eluzita vojo"
 
 #. I18N: ./data/grandprix/3_tothemoonandback.grandprix
 msgid "To the Moon and Back"
@@ -193,7 +194,7 @@ msgstr "Reen"
 
 #. I18N: ./data/gui/dialogs/android/init_android.stkgui
 msgid "Select a type of control that you prefer"
-msgstr ""
+msgstr "Elelktu la tipon de kontrolo ke vi preferas"
 
 #. I18N: ./data/gui/dialogs/android/init_android.stkgui
 #. I18N: Control type
@@ -227,11 +228,11 @@ msgstr "Stirilo"
 #. I18N: ./data/gui/dialogs/android/multitouch_settings.stkgui
 #. I18N: In the multitouch settings screen
 msgid "Auto acceleration"
-msgstr ""
+msgstr "Aŭtomata akcelo"
 
 #. I18N: ./data/gui/dialogs/android/init_android.stkgui
 msgid "You can change it later in touch device settings."
-msgstr ""
+msgstr "Vi povas ŝanĝi ĝin poste en la agordoj de la tuŝa aparato."
 
 #. I18N: ./data/gui/dialogs/android/init_android.stkgui
 #. I18N: ./data/gui/dialogs/android/multitouch_settings.stkgui
@@ -246,7 +247,7 @@ msgstr "Apliki"
 
 #. I18N: ./data/gui/dialogs/android/multitouch_settings.stkgui
 msgid "Touch Device Settings"
-msgstr ""
+msgstr "Agordoj de la tuŝa aparato"
 
 #. I18N: ./data/gui/dialogs/android/multitouch_settings.stkgui
 #. I18N: In the multitouch settings screen
@@ -291,12 +292,12 @@ msgstr "Aparato ŝaltita"
 #. I18N: ./data/gui/dialogs/android/multitouch_settings.stkgui
 #. I18N: In the multitouch settings screen
 msgid "Inverted buttons"
-msgstr ""
+msgstr "Inversitaj butonoj"
 
 #. I18N: ./data/gui/dialogs/android/multitouch_settings.stkgui
 #. I18N: In the multitouch settings screen
 msgid "Buttons scale"
-msgstr ""
+msgstr "Butona skalo"
 
 #. I18N: ./data/gui/dialogs/android/multitouch_settings.stkgui
 #. I18N: In the multitouch settings screen
@@ -388,7 +389,7 @@ msgstr "Konfirmi"
 #. I18N: In the 'confirm resolution' dialog, that's shown when switching
 #. resoluton
 msgid "Revert"
-msgstr ""
+msgstr "Reiri"
 
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 msgid "Camera Settings"
@@ -402,7 +403,7 @@ msgstr "Ludanta kamerao"
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 #. I18N: In the ui/camera screen
 msgid "FOV"
-msgstr ""
+msgstr "Vidkampo"
 
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 #. I18N: In the ui/camera screen
@@ -417,17 +418,17 @@ msgstr "Angulo"
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 #. I18N: In the ui/camera screen
 msgid "Smooth camera"
-msgstr ""
+msgstr "Glata fotilo"
 
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 #. I18N: In the ui/camera settings
 msgid "Backward camera"
-msgstr ""
+msgstr "Inversa fotilo"
 
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 #. I18N: In the ui/camera screen
 msgid "Follow ball in soccer mode"
-msgstr ""
+msgstr "Sekvu la pilkon en la futbala modo"
 
 #. I18N: ./data/gui/dialogs/custom_camera_settings.stkgui
 #. I18N: In the ui/camera screen
@@ -471,7 +472,7 @@ msgstr "Profundeco de kampo"
 #. I18N: ./data/gui/dialogs/custom_video_settings.stkgui
 #. I18N: Video settings
 msgid "Glow (Outlines)"
-msgstr ""
+msgstr "Brilo (Skizoj)"
 
 #. I18N: ./data/gui/dialogs/custom_video_settings.stkgui
 #. I18N: Video settings
@@ -909,12 +910,12 @@ msgstr "Nomo"
 #. I18N: ./data/gui/dialogs/online/splitscreen_player_dialog.stkgui
 #. I18N: Splitscreen player in network
 msgid "Handicap"
-msgstr ""
+msgstr "Handikapo"
 
 #. I18N: ./data/gui/dialogs/online/splitscreen_player_dialog.stkgui
 #. I18N: Splitscreen player in network
 msgid "Press the 'All players ready' button after the player list is ready."
-msgstr ""
+msgstr "Premu la \"ciuj ludantoj pretaj\" butonon post la listo de ludantoj estas preta."
 
 #. I18N: ./data/gui/dialogs/online/splitscreen_player_dialog.stkgui
 #. I18N: Splitscreen player in network
@@ -924,7 +925,7 @@ msgstr "Ĉiuj ludantoj pretas"
 #. I18N: ./data/gui/dialogs/online/splitscreen_player_dialog.stkgui
 #. I18N: Splitscreen player in network
 msgid "Clear players"
-msgstr ""
+msgstr "Malbari la ludantojn"
 
 #. I18N: ./data/gui/dialogs/online/user_info_dialog.stkgui
 #. I18N: User info dialog
@@ -969,7 +970,7 @@ msgstr "Reen al la menuo"
 #. I18N: ./data/gui/dialogs/press_a_key_dialog.stkgui
 #. I18N: When changing input configurations
 msgid "Press fully and release..."
-msgstr ""
+msgstr "Puŝu plene kaj liberigu"
 
 #. I18N: ./data/gui/dialogs/press_a_key_dialog.stkgui
 #. I18N: When configuring input
@@ -1173,7 +1174,7 @@ msgstr "Montri nur plej bonajn tempojn"
 #. I18N: ./data/gui/screens/ghost_replay_selection.stkgui
 #. I18N: In the ghost replay selection screen
 msgid "Compare replay"
-msgstr ""
+msgstr "Komparu la ripetojn"
 
 #. I18N: ./data/gui/screens/ghost_replay_selection.stkgui
 #. I18N: In the ghost replay selection screen
@@ -1183,7 +1184,7 @@ msgstr "Sole montru ripetludojn laŭ la nuna malfacileco"
 #. I18N: ./data/gui/screens/ghost_replay_selection.stkgui
 #. I18N: In the ghost replay selection screen
 msgid "Only show replays matching the current version"
-msgstr ""
+msgstr "Nur montri ripetojn kiu kongruas kun la aktuala versio"
 
 #. I18N: ./data/gui/screens/ghost_replay_selection.stkgui
 #. I18N: In the ghost replay selection screen
@@ -1424,7 +1425,7 @@ msgstr ""
 
 #. I18N: ./data/gui/screens/help2.stkgui
 msgid "SuperTuxKart features several game modes:"
-msgstr ""
+msgstr "SuperTuxKart inkluzivas plurajn modojn de ludo:"
 
 #. I18N: ./data/gui/screens/help2.stkgui
 #. I18N: In the help menu
@@ -1664,7 +1665,7 @@ msgstr ""
 #. I18N: ./data/gui/screens/help7.stkgui
 #. I18N: In the help menu
 msgid "... or on the same device:"
-msgstr ""
+msgstr "aŭ sur la sama aparato:"
 
 #. I18N: ./data/gui/screens/help7.stkgui
 #. I18N: In the help menu
@@ -1878,7 +1879,7 @@ msgstr "..."
 #. I18N: ./data/gui/screens/online/profile_achievements_tab.stkgui
 #. I18N: In the achievements screen
 msgid "Player rankings"
-msgstr ""
+msgstr "Ludantaj rangoj"
 
 #. I18N: ./data/gui/screens/online/profile_friends.stkgui
 #. I18N: Section in the profile screen
@@ -1983,7 +1984,7 @@ msgstr "Montri privatajn servilo(j)n"
 #. I18N: ./data/gui/screens/online/server_selection.stkgui
 #. I18N: In the server selection screen
 msgid "Use IPv6 connection"
-msgstr ""
+msgstr "Uzu IPv6 retkonekto"
 
 #. I18N: ./data/gui/screens/online/user_search.stkgui
 msgid "User search"
@@ -2208,7 +2209,7 @@ msgstr "Enŝaltu perludistajn handikapojn"
 #. I18N: For mobile version for STK, uninstall the downloaded assets
 #: src/states_screens/options/options_screen_general.cpp:111
 msgid "Uninstall full game assets"
-msgstr ""
+msgstr "Malinstali ĉiujn valoraĵojn de la ludo"
 
 #. I18N: ./data/gui/screens/options_input.stkgui
 #. I18N: In the input configuration screen
@@ -2597,7 +2598,7 @@ msgstr ""
 
 #. I18N: ../stk-assets/tracks/ancient_colosseum_labyrinth/track.xml
 msgid "Ancient Colosseum Labyrinth"
-msgstr ""
+msgstr "Antikva Kolosea Labirinto"
 
 #. I18N: ../stk-assets/tracks/arena_candela_city/track.xml
 #. I18N: ../stk-assets/tracks/candela_city/track.xml
@@ -3563,7 +3564,7 @@ msgstr ""
 
 #: src/karts/controller/spare_tire_ai.cpp:150
 msgid "You can have at most 3 lives!"
-msgstr ""
+msgstr "Vi povas havi plejen 3 vivojn!"
 
 #: src/karts/controller/spare_tire_ai.cpp:157
 msgid "+1 life."
@@ -3580,7 +3581,7 @@ msgstr "Vi venkis la vetkuron!"
 #: src/karts/kart.cpp:1024
 #, c-format
 msgid "You finished the race in rank %d!"
-msgstr ""
+msgstr "Vi finis la vetkuron en rango %d!"
 
 #. I18N: Message shown in game to tell player left the game in network
 #: src/karts/kart_rewinder.cpp:126 src/network/protocols/client_lobby.cpp:1156
@@ -4316,13 +4317,13 @@ msgstr "Ovoĉasadoj finitaj"
 #. added to multiple different goals.
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:222
 msgid "Races started with a ghost replay"
-msgstr ""
+msgstr "Vetkuroj komencitaj kun fantoma ripetludo"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:224
 msgid "Races finished with a ghost replay"
-msgstr ""
+msgstr "Vetkuroj finitaj kun fantoma ripetludo"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
@@ -4458,7 +4459,7 @@ msgstr ""
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:280
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:305
 msgid "Races finished alone"
-msgstr "Vetkuroj finis sole"
+msgstr "Vetkuroj finitaj sole"
 
 #. I18N: A goal for achievements. If this text is in (), it's a precision
 #. added to multiple different goals.
@@ -4793,7 +4794,7 @@ msgstr ""
 #: src/states_screens/dialogs/high_score_info_dialog.cpp:139
 #, c-format
 msgid "Laps: %d"
-msgstr ""
+msgstr "Rondiroj: %d"
 
 #: src/states_screens/dialogs/high_score_info_dialog.cpp:143
 #, c-format
@@ -4926,7 +4927,7 @@ msgstr "Eliri vetkuron"
 #: src/states_screens/dialogs/ranking_callback.hpp:44
 #, c-format
 msgid "%s has no ranking yet."
-msgstr ""
+msgstr "%s ne havas rangon ankoraŭ."
 
 #: src/states_screens/dialogs/ranking_callback.hpp:56
 #, c-format
@@ -5439,7 +5440,7 @@ msgstr ""
 #: src/states_screens/online/tracks_screen.cpp:879
 #, c-format
 msgid "Remaining time: %d"
-msgstr ""
+msgstr "Restanta tempo: %d"
 
 #. I18N: Goals in achievement
 #: src/states_screens/online/online_profile_achievements.cpp:83
