--- a/data/po/it.po
+++ b/data/po/it.po
@@ -30,7 +30,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Riccardi Unix, 2022\n"
+"Last-Translator: Ioma Taani, 2019-2022\n"
 "Language-Team: Italian (http://www.transifex.com/supertuxkart/supertuxkart/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2533,7 +2533,7 @@ msgstr "Amanda"
 
 #. I18N: ../stk-assets/karts/beastie/kart.xml
 msgid "Godette"
-msgstr ""
+msgstr "Godette"
 
 #. I18N: ../stk-assets/karts/emule/kart.xml
 msgid "Emule"
