--- a/data/po/zh_TW.po
+++ b/data/po/zh_TW.po
@@ -4,7 +4,7 @@
 # 
 # Translators:
 # Ben Au, 2015
-# Benau, 2016,2018-2020
+# Benau, 2016,2018-2020,2022
 # Benau, 2015-2016
 # pan93412 <pan93412@gmail.com>, 2018
 # Hsiu-Ming Chang <cges30901@gmail.com>, 2015
@@ -20,7 +20,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: 黃柏諺 <s8321414@gmail.com>, 2019-2022\n"
+"Last-Translator: Benau, 2016,2018-2020,2022\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/supertuxkart/supertuxkart/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
